tests/nightly/function/compile_fail/missing_check.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
 --> $DIR/missing_check.rs:7:5
  |
7 |     foo()
  |     ^^^-- supplied 0 arguments
  |     |
  |     expected 1 argument
  |
note: function defined here
 --> $DIR/missing_check.rs:4:4
  |
3 |   #[pre("is bar")]
  |  _______-
4 | | fn foo() {}
  | |____^^-
